clean note